welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: identifier expected but integer literal found.
  var A:Int ==0
              ^island:4: error: '(' expected but identifier found.
    if nums(k)!=nums(k+1){
       ^island:7: error: illegal start of simple expression
  }
  ^